[project]
name = "unzip-bot"
version = "7.2.0"
authors = [
  { name="EDM115", email="unzip@edm115.dev" },
]
description = "A Telegram bot to extract various types of archives"
dependencies = [
  "aiocron==2.1",
  "aiofiles==24.1.0",
  "aiohttp==3.12.15",
  "base58check==1.0.2",
  "dnspython==2.7.0",
  "gitdb==4.0.12",
  "GitPython==3.1.44",
  "motor==3.7.0",
  "mutagen==1.47.0",
  "Pillow==11.2.1",
  "psutil==7.0.0",
  "pykeyboard==0.1.5",
  "pyrofork==2.3.61",
  "pyrogram==1.4.16",
  "PyTgCrypto==1.2.9.2",
  "requests==2.32.3",
  "setuptools==80.1.0",
  "unzip-http==0.6",
  "wheel==0.46.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
format = "ruff format"
install = "uv sync"
install-pip = "pip install -U -r requirements.txt"
lint = "ruff check"
lint-fix = "ruff check --fix"
run = "./start.sh"
venv = "python -m venv .venv"

[project.urls]
"Homepage" = "https://github.com/pkb2yt2/UnzipProLogs"
"Bug Tracker" = "https://github.com/pkb2yt2/UnzipProLogs/issues"
"Funding" = "https://t.me/WHO_is_PREETAM"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
logger-objects = ["unzipbot.LOGGER"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv]
compile-bytecode = true
link-mode = "copy"

[tool.uv.pip]
compile-bytecode = true
generate-hashes = true
link-mode = "copy"
